--- a/resources/public/kpcss/style.css
+++ b/resources/public/kpcss/style.css
@@ -241,10 +241,6 @@ h5 {
     position: relative;
 }
 
-.leanMoreBanner {
-    margin-right: 20px;
-}
-
 .koompi-gallery {
     height: auto;
     width: 100%;
@@ -426,13 +422,14 @@ h5 {
 }
 
 .footerBack {
-    background-color: #cfd8dd;
+    background-color: #2c2c2c;
     padding: 40px;
     margin-top: 40px;
 }
 
 .footerBack p {
     font-weight: 100;
+    color: #fff;
 }
 
 .brainchild {
@@ -687,7 +684,7 @@ textarea {
 }
 
 .privacy a {
-    color: #333 !important;
+    color: #898989 !important;
     margin-left: 20px;
 }
 .featureBannerContent p {
@@ -724,6 +721,14 @@ p{
     transform: scale(1.4);
 }
 
+.koompi-about-image{
+    transform: scale(1.4);
+    position: relative !important;
+    margin-left: 35%;
+    margin-top: 20%;
+    overflow: hidden;
+}
+
 @keyframes loadingPage {
     0% {
         box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.2), 0 2px 9px 0 rgba(0, 0, 0, 0.19);
@@ -739,7 +744,7 @@ p{
 }
 
 .backgroundAbout {
-    background-color: #cfd8dd !important;
+    background-color: #d4d8d93b !important;
     padding: 70px 0px;
 }
 
@@ -748,8 +753,12 @@ p{
 }
 
 .memberTitle {
+    margin-bottom: 30px !important;
     text-align: center;
-    padding: 30px 0px;
+    padding: 40px 0px;
+}
+.paddingAbout{
+    padding: 50px 0px !important;
 }
 
 .teamImage {
@@ -766,9 +775,9 @@ p{
     margin-bottom: 20px !important;
 }
 
-.aboutPadding {
+/* .aboutPadding {
     padding-right: 35% !important;
-}
+} */
 
 @media only screen and (max-width: 1450px) {
     .container {
@@ -845,14 +854,6 @@ p{
         font-size: 22px;
     }
 
-    .leanMoreBanner,
-    .buyNowBanner {
-        color: #00c152;
-        position: relative;
-        top: 30px;
-        font-size: 15px;
-    }
-
     .koompiBeautyImg {
         max-width: 125% !important;
     }
@@ -888,6 +889,13 @@ p{
         height: 405px;
         margin-left: 55%;
     }
+    .koompi-about-image{
+        transform: scale(1.2);
+        position: relative !important;
+        margin-left: 0%;
+        margin-top: 10%;
+        overflow: hidden;
+    }
 }
 
 @media only screen and (max-width: 1290px) {
@@ -915,12 +923,22 @@ p{
     .containerOrder {
         width: 60% !important;
     }
+    .bannerText p {
+        padding: 0px 0px;
+        font-size: 20px;
+    }
+    .koompiBattery{
+        transform: scale(1)
+    }
 }
 
 @media only screen and (max-width: 979px) {
     .bannerImageFeature {
         height: 246px;
         margin-left: 62%;
+    }
+    .performanceBack img{
+        display: none;
     }
 
     .bannerDesc {
@@ -938,14 +956,11 @@ p{
         text-align: center;
         position: absolute;
         top: 25%;
-        left: 43%;
+        left: 46%;
         transform: translate(-40%, -50%);
         color: white;
     }
 
-    .beautyDetailDesc {
-        font-size: 28px !important;
-    }
 
     .beautyDetailTitle {
         padding: 0px !important;
@@ -978,7 +993,7 @@ p{
     }
 
     .beautyDetailDesc {
-        font-size: 20px !important;
+        font-size: 28px !important;
     }
 
     .smallTitle {
@@ -1008,11 +1023,28 @@ p{
     .smallFeatureImg {
         max-width: 40% !important;
     }
+    .bannerText p{
+        display: none
+    }
+    .leanMoreBanner a,
+    .buyNowBanner a {
+        position: relative;
+        top: 20px !important;
+    }
+    .koompiBattery{
+        transform: scale(1)
+    }
 }
 
 @media only screen and (max-width: 767px) {
     .koompiBeautyImg {
         max-width: 65% !important;
+    }
+    .bannerText p{
+        display: none
+    }
+    .koompi-about-image{
+        display: none !important;
     }
 
     .bannerTitle {
@@ -1024,14 +1056,6 @@ p{
     .bannerDesc {
         margin: 0px;
         font-size: 17px;
-    }
-
-    .leanMoreBanner,
-    .buyNowBanner {
-        color: #00c152;
-        position: relative;
-        top: 0px;
-        font-size: 15px;
     }
 
     .bannerBackground {
@@ -1131,9 +1155,9 @@ p{
         font-size: 14px;
     }
 
-    .aboutPadding {
+    /* .aboutPadding {
         padding-right: 10% !important;
-    }
+    } */
 
     .ui.container.containerOrder {
         max-width: 90% !important;
@@ -1143,6 +1167,17 @@ p{
         top: 30px;
         right: 0px;
         width: 100%;
+    }
+    .leanMoreBanner a,
+    .buyNowBanner a {
+        position: relative;
+        top: 20px !important;
+    }
+    .koompiBattery{
+        display: none;
+    }
+    p{
+        font-size: 16px !important;
     }
 }
 
@@ -1194,14 +1229,6 @@ p{
         font-size: 13px;
     }
 
-    .leanMoreBanner,
-    .buyNowBanner {
-        color: #00c152;
-        position: relative;
-        top: 10px;
-        font-size: 13px;
-    }
-
     .batterPadding {
         padding: 0px 15px !important;
     }
@@ -1242,12 +1269,8 @@ p{
 
     .leanMoreBanner a,
     .buyNowBanner a {
-        color: #00c152;
         position: relative;
-        top: 5px;
-        font-size: 15px;
-        font-weight: 600;
-        transition: 0.3s;
+        top: 20px !important;
     }
 
     .bannerDesc {
@@ -1305,7 +1328,7 @@ p{
     }
 
     .footerBack {
-        background-color: #cfd8dd;
+        background-color: #2c2c2c;
         margin-top: 0px;
     }
 
@@ -1444,3 +1467,4 @@ p{
     [class*="widescreen or lower hidden"] {
         display: none !important;
     }
+}
